# SPIRV-Cross

./: CMakeLists.txt
src/: spirv_cpp.cpp  spirv_cross_c.h
